@@ -69,8 +69,11 @@ details.
 
 \begin{itemize}
 
-\item Descriptions go here.
-
+\item The \module{curses} modules now supports the ncurses extension 
+   \function{use_default_colors()}.   On platforms where the terminal 
+   supports transparency, this makes it possible to use a transparent background.
+   (Contributed by J\"org Lehmann.)
+   
 \end{itemize}
 
 
